--- a/package.json
+++ b/package.json
@@ -10,6 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@aws-cdk/aws-lambda": "^1.203.0",
+    "@aws-cdk/aws-lambda-nodejs": "^1.203.0",
+    "@octokit/rest": "^18.12.0",
+    "aws-cdk-lib": "^2.208.0",
+    "aws-serverless-express": "^3.4.0",
+    "constructs": "^10.4.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
